# AI-research-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  routes.py  schemas.py  stream.py
benchmark_results/: deep-dev-12-race.jsonl  deep-dev-12-report-metrics.tsv  deep-dev-12.jsonl  deep-dev-54-62.jsonl  deep-dev-56-breadth-metrics.json  deep-dev-56-breadth-race.jsonl  deep-dev-56-breadth.jsonl  deep-dev-56-citationfix-race.jsonl  deep-dev-56-citationfix.jsonl  deep-full-50-final.jsonl  deep-smoke-3-complete.jsonl  deep-smoke-3.jsonl  deep-smoke-51.jsonl
benchmark_results/deep-dev-56-breadth-fact/: deduplicated.jsonl  extracted.jsonl  fact_result.txt  scraped.jsonl  validated.jsonl
benchmark_results/deep-full-50-final-fact-gpt54mini/: deduplicated.jsonl  (+4 more)
docs/: deepresearch-bench.md
eval/: dataset.py  deepresearch_bench.py  judge.py  run_eval.py
research_agent/: agent.py  citation_compliance.py  cli.py  config.py  deep_prompts.py  deep_research.py  factory.py  fetch.py  grounding.py  llm.py  prompts.py  search.py  source_quality.py  state.py  tools.py
tests/: test_agent.py  test_api.py  test_citation_compliance.py  test_cli.py  test_config.py  test_dataset.py  test_deep_research.py  test_deepresearch_bench.py  test_factory.py  test_fetch.py  test_grounding.py  test_judge.py  test_llm.py  test_prompts.py  test_run_eval.py  test_search.py  test_source_quality.py  test_state.py  test_tools.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
(+23 files in other folders)
